sample-app/k8s/07-kustomize/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
spec:
  rules:
  - host: todo.dev.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dev-todo-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-todo-frontend
            port:
              number: 80
